--- a/frontend-pos/src/app/shared/components/lateral-menu-bar/lateral-menu-bar.component.scss
+++ b/frontend-pos/src/app/shared/components/lateral-menu-bar/lateral-menu-bar.component.scss
@@ -1,23 +1,43 @@
+@import "src/app/styles/colors";
+mat-sidenav-container {
+  min-height: 100%;
 
-.lateral-menu-bar-container{
-  height: 100vh;
-  width: fit-content;
-  transition: 1s;
-  background-color: aquamarine;
-  mat-list {
+  .m-sidenav-small {
+    width: auto;
+  }
+
+  mat-sidenav {
+    width: 70px;
+    min-height: 100%;
+    background-color: $white;
     display: flex;
-    transition: 1s;
+    align-items: center;
+    justify-content: center;
 
-    flex-direction: column;
-    background-color: beige;
-    mat-list-item {
-      span {
-        transition: 10s;
-
+    mat-list {
+      mat-list-item {
+        ::ng-deep span span {
+          display: grid;
+          grid-template-columns: 40px 160px;
+          grid-template-rows: 40px;
+          align-items: center;
+          svg {
+            grid-column: 1;
+            align-self: center;
+            justify-self: center;
+            justify-content: center;
+          }
+          span {
+            display: flex;
+            align-items: center;
+            grid-column: 2;
+          }
+        }
       }
-      transition: 1s;
-      background-color: red;
-      margin: 10px 0;
     }
+  }
+
+  mat-sidenav-content {
+    //background-color: transparent;
   }
 }
