--- a/frontend-pos/src/styles.scss
+++ b/frontend-pos/src/styles.scss
@@ -1,5 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+@import "app/styles/colors";
 @import "material-icons/iconfont/material-icons.css";
+
 * {
   font-family: Poppins;
+}
+
+body {
+  margin: 0;
+  height: 100vh;
+  background-color: lightgray;
 }
