Added basic navigation

--- a/frontend-pos/src/app/shared/components/lateral-menu-bar/item-menu-bar/item-menu-bar.component.html
+++ b/frontend-pos/src/app/shared/components/lateral-menu-bar/item-menu-bar/item-menu-bar.component.html
@@ -1,4 +1,4 @@
-<span class="menu-item-container">
-  <img src="{{url}}">
+<span class="menu-item-container" (click)="click()">
+  <img src="{{url}}" alt="{{text}}">
   <span class="menu-item" *ngIf="showText">{{text}}</span>
 </span>
