--- a/frontend-pos/src/app/shared/components/lateral-menu-bar/item-menu-bar/item-menu-bar.component.scss
+++ b/frontend-pos/src/app/shared/components/lateral-menu-bar/item-menu-bar/item-menu-bar.component.scss
@@ -2,6 +2,7 @@ span.menu-item-container{
   display: grid;
   grid-template-columns: 40px 160px;
   grid-template-rows: 40px;
+  column-gap: 10px;
   align-items: center;
   img {
     grid-column: 1;
