--- a/frontend-pos/src/app/shared/components/lateral-menu-bar/lateral-menu-bar.component.scss
+++ b/frontend-pos/src/app/shared/components/lateral-menu-bar/lateral-menu-bar.component.scss
@@ -7,6 +7,7 @@ mat-sidenav-container {
   }
 
   mat-sidenav {
+    height: 100%;
     width: 70px;
     min-height: 100%;
     background-color: $white;
@@ -14,8 +15,33 @@ mat-sidenav-container {
     align-items: center;
     justify-content: center;
 
+    ::ng-deep div {
+      overflow: hidden;
+      div {
+        height: 100%;
+        display: flex;
+      }
+    }
+
     mat-list {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      height: 100%;
+      padding: 0;
+
       mat-list-item {
+        margin: 5px 0;
+        pos-item-menu-bar.sign-out {
+          filter: invert(39%) sepia(74%) saturate(4789%) hue-rotate(343deg) brightness(98%) contrast(100%);
+        }
+
+        pos-item-menu-bar.active {
+          filter: invert(79%) sepia(26%) saturate(6845%) hue-rotate(105deg) brightness(96%) contrast(101%);
+        }
+        pos-item-menu-bar {
+          filter: invert(53%) sepia(6%) saturate(532%) hue-rotate(164deg) brightness(89%) contrast(88%);
+        }
       }
     }
   }
