--- a/frontend-pos/src/app/styles/colors.scss
+++ b/frontend-pos/src/app/styles/colors.scss
@@ -1,4 +1,26 @@
+$yellow-darker: #C2A100;
+$yellow-medium: #FACF00;
+$yellow-lighter: #FFE670;
+
+$green-darker: #00B76F;
+$green-medium: #00E188;
+$green-lighter: #36FFB0;
+
+$blue-darker: #1981C2;
+$blue-medium: #3CA9EE;
+$blue-lighter: #58BEFF;
+
+$red-darker: #D54840;
+$red-medium: #FA3A2F;
+$red-lighter: #FF635A;
+
 $white: #FFFFFF;
+$gray-lightest: #E7E9EA;
+$gray-lighter: #A2A8AD;
+$gray-medium: #747D84;
+$gray-darker: #707070;
+$gray-darkest: #5C676F;
+$gray-darkest-two: #46525B;
+$gray-darkest-three: #182733;
 $black: #000000;
-$cyan: #FAFA00;
 
