Animation on hover

--- a/frontend-pos/src/app/shared/components/lateral-menu-bar/lateral-menu-bar.component.html
+++ b/frontend-pos/src/app/shared/components/lateral-menu-bar/lateral-menu-bar.component.html
@@ -1,5 +1,5 @@
 <mat-sidenav-container class="m-sidenav-container">
-  <mat-sidenav [ngClass]="{'m-sidenav': true, 'm-sidenav-small': isExpanded}" mode="side" opened #sidenav
+  <mat-sidenav [ngClass]="{'m-sidenav': true, 'm-sidenav-big': isExpanded}" mode="side" opened #sidenav
                (mouseover)="mouseenter()" (mouseleave)="mouseleave()">
     <div class="m-sidenav__handle">
       <mat-list (mouseenter)="mouseenter()" (mouseleave)="mouseleave()">
