--- a/frontend-pos/src/app/features/home/home.component.html
+++ b/frontend-pos/src/app/features/home/home.component.html
@@ -1,1 +1,1 @@
-<p>home works!sldjalsdjalsdjlasjdlaksjdlasjdlasjdlajsldajdlsjldajsldas</p>
+<button mat-flat-button (click)="pizzaParty()">Toaster</button>
