--- a/frontend-pos/src/app/shared/components/snack-bar/snack-bar.component.scss
+++ b/frontend-pos/src/app/shared/components/snack-bar/snack-bar.component.scss
@@ -10,6 +10,7 @@ div.snack-bar-container {
   min-width: 500px;
   align-items: center;
 
+
   span.icon-snack-bar {
     width: 60px;
     height: 100%;
@@ -24,7 +25,6 @@ div.snack-bar-container {
 
   span.description-snack-bar {
     background-color: $white;
-    color: $black;
     height: 100%;
     display: flex;
     align-items: center;
@@ -34,10 +34,29 @@ div.snack-bar-container {
       border-top-right-radius: 13px;
       border-bottom-right-radius: 13px;
     }
+    span.colored {
+      margin: 0 5px;
+      font-weight: bold;
+    }
+    &.information-snack-bar span.colored {
+      color: $blue-lighter;
+    }
 
+    &.error-snack-bar span.colored {
+      color: $red-lighter;
+    }
+
+    &.warning-snack-bar span.colored {
+      color: $yellow-medium;
+    }
+
+    &.success-snack-bar span.colored {
+      color: $green-medium;
+    }
   }
 
   span.dismiss-snack-bar {
 
   }
 }
+
