--- a/frontend-pos/src/app/shared/components/lateral-menu-bar/lateral-menu-bar.component.scss
+++ b/frontend-pos/src/app/shared/components/lateral-menu-bar/lateral-menu-bar.component.scss
@@ -1,9 +1,11 @@
 @import "src/app/styles/colors";
 mat-sidenav-container {
-  min-height: 100%;
-
+  min-height: calc(100vh - 3em - 6px);
+  width: 100%;
+  position: absolute;
+  bottom: 0;
   .m-sidenav-big {
-    //width: auto;
+    //width: 480px;
   }
 
   mat-sidenav:hover {
