--- a/frontend-pos/src/app/shared/components/menu-bar/menu-bar.component.html
+++ b/frontend-pos/src/app/shared/components/menu-bar/menu-bar.component.html
@@ -1,1 +1,9 @@
-<div class="menu-container">MENU</div>
+<div class="menu-container">
+  <span class="route"></span>
+  <span class="user">
+    <span class="profile-image">
+        <span class="material-icons-outlined">account_circle</span>
+    </span>
+    <span class="user-name">Perez, Juan Carlos</span>
+  </span>
+</div>
