--- a/frontend-pos/src/app/shared/components/menu-bar/menu-bar.component.html
+++ b/frontend-pos/src/app/shared/components/menu-bar/menu-bar.component.html
@@ -1,5 +1,6 @@
 <div class="menu-container">
-  <span class="route"></span>
+<!--  <span class="breadcrumbs"></span>-->
+  <pos-breadcrumbs></pos-breadcrumbs>
   <span class="user">
     <span class="profile-image">
         <span class="material-icons-outlined">account_circle</span>
@@ -7,3 +8,4 @@
     <span class="user-name">Perez, Juan Carlos</span>
   </span>
 </div>
+
