--- a/frontend-pos/src/app/shared/components/menu-bar/menu-bar.component.scss
+++ b/frontend-pos/src/app/shared/components/menu-bar/menu-bar.component.scss
@@ -1,14 +1,15 @@
 @import "src/app/styles/colors";
 div.menu-container {
   width: 100%;
-  height: 3em;
+  height: 3.5em;
   background-color: $white;
   box-shadow: 0 3px 9px $gray-medium;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 
-  span.route {
-
+  pos-breadcrumbs {
+    margin-left: 50px;
   }
 
   span.user {
@@ -18,6 +19,7 @@ div.menu-container {
     justify-content: center;
     margin-right: 50px;
     padding: 0 20px;
+    height: 100%;
 
     &:hover {
       background-color: $gray-lightest;
@@ -30,11 +32,13 @@ div.menu-container {
       align-items: center;
 
       span {
-        font-size: 36px;
+        font-size: 40px;
       }
     }
 
     span.user-name {
+      font-size: 20px;
+      font-weight: 600;
     }
   }
 }
