Styling item-card

--- a/frontend-pos/src/app/features/home/home.component.html
+++ b/frontend-pos/src/app/features/home/home.component.html
@@ -1,1 +1,3 @@
-<button mat-flat-button (click)="pizzaParty()">Toaster</button>
+<span class="home-item-container">
+  <pos-item-card *ngFor="let item of items" [item]="item"></pos-item-card>
+</span>
