--- a/frontend-pos/src/app/shared/components/lateral-menu-bar/lateral-menu-bar.component.scss
+++ b/frontend-pos/src/app/shared/components/lateral-menu-bar/lateral-menu-bar.component.scss
@@ -63,6 +63,8 @@ mat-sidenav-container {
   }
 
   mat-sidenav-content {
+    height: 92vh;
+    overflow-y: auto;
     //background-color: transparent;
   }
 }
